Adding button classes, support for extensions

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url("//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic");
+/* Import Modules */
 /* Typography Resets */
 /* line 8, ../scss/modules/_reset.scss */
 div, dl, dt, dd,
@@ -2348,7 +2349,7 @@ body {
 /* line 18, ../scss/modules/_type.scss */
 body h1, body h2, body h3, body h4, body h5, body h6 {
   line-height: 1;
-  font-weight: 400;
+  font-weight: 300;
   font-style: normal;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222222;
@@ -2416,133 +2417,141 @@ a img {
 /* line 79, ../scss/modules/_type.scss */
 p {
   margin-bottom: 1rem;
+  line-height: 1.5;
+  font-weight: 300;
 }
 
-/* line 104, ../scss/modules/_type.scss */
+/* line 86, ../scss/modules/_type.scss */
+.strong {
+  font-weight: bold;
+}
+
+/* line 89, ../scss/modules/_type.scss */
+.small, small {
+  font-size: 15.49854px;
+  font-size: 0.86103rem;
+}
+
+/* line 92, ../scss/modules/_type.scss */
+.large {
+  font-size: 20.9052px;
+  font-size: 1.1614rem;
+}
+
+/* line 122, ../scss/modules/_type.scss */
 ul, ol, dl {
   list-style-position: outside;
   margin-bottom: 1rem;
   padding: 0;
 }
-/* line 109, ../scss/modules/_type.scss */
+/* line 127, ../scss/modules/_type.scss */
 ul.clean, ol.clean, dl.clean {
   list-style: none;
   margin-left: 0;
 }
-/* line 90, ../scss/modules/_type.scss */
+/* line 108, ../scss/modules/_type.scss */
 ul.clean ul, ul.clean ol, ol.clean ul, ol.clean ol, dl.clean ul, dl.clean ol {
   list-style: none;
   margin-left: 0;
 }
-/* line 112, ../scss/modules/_type.scss */
+/* line 130, ../scss/modules/_type.scss */
 ul.inline, ol.inline, dl.inline {
   margin-left: 0;
 }
-/* line 115, ../scss/modules/_type.scss */
+/* line 133, ../scss/modules/_type.scss */
 ul.inline > li, ol.inline > li, dl.inline > li {
   display: inline-block;
   margin-right: 1rem;
   white-space: nowrap;
 }
-/* line 123, ../scss/modules/_type.scss */
+/* line 141, ../scss/modules/_type.scss */
 ul ul, ul ol, ul dl, ol ul, ol ol, ol dl, dl ul, dl ol, dl dl {
   margin-bottom: 0;
 }
 
-/* line 128, ../scss/modules/_type.scss */
+/* line 146, ../scss/modules/_type.scss */
 ul {
   margin-left: 1rem;
 }
-/* line 131, ../scss/modules/_type.scss */
+/* line 149, ../scss/modules/_type.scss */
 ul.square {
   list-style-type: square;
 }
-/* line 97, ../scss/modules/_type.scss */
+/* line 115, ../scss/modules/_type.scss */
 ul.square ul, ul.square ol {
   list-style: inherit;
 }
-/* line 132, ../scss/modules/_type.scss */
+/* line 150, ../scss/modules/_type.scss */
 ul.circle {
   list-style-type: circle;
 }
-/* line 97, ../scss/modules/_type.scss */
+/* line 115, ../scss/modules/_type.scss */
 ul.circle ul, ul.circle ol {
   list-style: inherit;
 }
-/* line 133, ../scss/modules/_type.scss */
+/* line 151, ../scss/modules/_type.scss */
 ul.disc {
   list-style-type: disc;
 }
-/* line 97, ../scss/modules/_type.scss */
+/* line 115, ../scss/modules/_type.scss */
 ul.disc ul, ul.disc ol {
   list-style: inherit;
 }
 
-/* line 136, ../scss/modules/_type.scss */
+/* line 154, ../scss/modules/_type.scss */
 ol {
   margin-left: 1.4rem;
 }
 
-/* line 140, ../scss/modules/_type.scss */
+/* line 158, ../scss/modules/_type.scss */
 li {
   list-style-position: outside;
 }
 
-/* line 145, ../scss/modules/_type.scss */
+/* line 163, ../scss/modules/_type.scss */
 dl dt {
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
-/* line 149, ../scss/modules/_type.scss */
+/* line 167, ../scss/modules/_type.scss */
 dl dd {
   margin-bottom: 0.5rem;
 }
 
-/* line 154, ../scss/modules/_type.scss */
-small {
-  font-size: 15.49854px;
-  font-size: 0.86103rem;
-}
-
-/* line 159, ../scss/modules/_type.scss */
-.strong {
-  font-weight: bold;
-}
-
-/* line 164, ../scss/modules/_type.scss */
+/* line 176, ../scss/modules/_type.scss */
 .align-left {
   text-align: left;
 }
 
-/* line 165, ../scss/modules/_type.scss */
+/* line 177, ../scss/modules/_type.scss */
 .align-right {
   text-align: right;
 }
 
-/* line 166, ../scss/modules/_type.scss */
+/* line 178, ../scss/modules/_type.scss */
 .align-center {
   text-align: center;
 }
 
-/* line 172, ../scss/modules/_type.scss */
+/* line 184, ../scss/modules/_type.scss */
 .valign-center:before {
   content: "";
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 179, ../scss/modules/_type.scss */
+/* line 191, ../scss/modules/_type.scss */
 .valign-center > * {
   display: inline-block;
   vertical-align: middle;
 }
 
-/* line 190, ../scss/modules/_type.scss */
+/* line 202, ../scss/modules/_type.scss */
 .stacked {
   margin-bottom: 0;
 }
 
-/* line 195, ../scss/modules/_type.scss */
+/* line 207, ../scss/modules/_type.scss */
 abbr, acronym, blockquote, code, dir, kbd, listing, plaintext, q, samp, tt, var, xmp {
   -webkit-hyphens: none;
   -moz-hyphens: none;
@@ -2551,7 +2560,7 @@ abbr, acronym, blockquote, code, dir, kbd, listing, plaintext, q, samp, tt, var,
   hyphens: none;
 }
 
-/* line 200, ../scss/modules/_type.scss */
+/* line 212, ../scss/modules/_type.scss */
 pre {
   white-space: pre;
   color: #222222;
@@ -2559,14 +2568,14 @@ pre {
   font-size: 1rem;
   font-family: monospace;
 }
-/* line 206, ../scss/modules/_type.scss */
+/* line 218, ../scss/modules/_type.scss */
 pre code {
   word-wrap: normal;
   white-space: -moz-pre-wrap;
   white-space: pre-wrap;
 }
 
-/* line 213, ../scss/modules/_type.scss */
+/* line 225, ../scss/modules/_type.scss */
 code {
   white-space: pre;
   color: #222222;
@@ -2575,26 +2584,26 @@ code {
   font-family: monospace;
 }
 
-/* line 221, ../scss/modules/_type.scss */
+/* line 233, ../scss/modules/_type.scss */
 blockquote {
   color: #484848;
   padding: 1rem;
   border-left: 1px solid #484848;
   margin-bottom: 1rem;
 }
-/* line 227, ../scss/modules/_type.scss */
+/* line 239, ../scss/modules/_type.scss */
 blockquote cite {
   display: block;
   font-size: 15.49854px;
   font-size: 0.86103rem;
   color: #484848;
 }
-/* line 233, ../scss/modules/_type.scss */
+/* line 245, ../scss/modules/_type.scss */
 blockquote p {
   color: #484848;
 }
 
-/* line 239, ../scss/modules/_type.scss */
+/* line 251, ../scss/modules/_type.scss */
 hr {
   clear: both;
   height: 0;
@@ -2604,7 +2613,7 @@ hr {
   border-width: 1px 0 0;
 }
 
-/* line 249, ../scss/modules/_type.scss */
+/* line 261, ../scss/modules/_type.scss */
 abbr, acronym {
   font-size: 86.10298%;
   text-transform: uppercase;
@@ -2612,13 +2621,14 @@ abbr, acronym {
   cursor: help;
 }
 
-/* line 76, ../scss/modules/_buttons.scss */
+/* line 77, ../scss/modules/_buttons.scss */
 button, .button, input[type=submit] {
   display: inline-block;
   padding: 0.5rem 1rem;
   cursor: pointer;
   border-style: solid;
   margin-right: 8px;
+  margin-bottom: 8px;
   font-size: 15.49854px;
   font-size: 0.86103rem;
   text-decoration: none;
@@ -2658,7 +2668,7 @@ button.transparent:active, .button.transparent:active, input[type=submit].transp
   background-color: #be2822;
   border-color: #be2822;
 }
-/* line 80, ../scss/modules/_buttons.scss */
+/* line 81, ../scss/modules/_buttons.scss */
 button.light, .button.light, input[type=submit].light {
   background-color: #efefef;
   border-color: #dddddd;
@@ -2694,7 +2704,7 @@ button.light.transparent:active, .button.light.transparent:active, input[type=su
   background-color: #e2e2e2;
   border-color: #e2e2e2;
 }
-/* line 81, ../scss/modules/_buttons.scss */
+/* line 82, ../scss/modules/_buttons.scss */
 button.dark, .button.dark, input[type=submit].dark {
   background-color: #222222;
   border-color: #101010;
@@ -2730,7 +2740,7 @@ button.dark.transparent:active, .button.dark.transparent:active, input[type=subm
   background-color: #151515;
   border-color: #151515;
 }
-/* line 82, ../scss/modules/_buttons.scss */
+/* line 83, ../scss/modules/_buttons.scss */
 button.primary, .button.primary, input[type=submit].primary {
   background-color: #d42d26;
   border-color: #b62721;
@@ -2766,7 +2776,7 @@ button.primary.transparent:active, .button.primary.transparent:active, input[typ
   background-color: #be2822;
   border-color: #be2822;
 }
-/* line 83, ../scss/modules/_buttons.scss */
+/* line 84, ../scss/modules/_buttons.scss */
 button.secondary, .button.secondary, input[type=submit].secondary {
   background-color: gray;
   border-color: #6e6e6e;
@@ -2802,11 +2812,16 @@ button.secondary.transparent:active, .button.secondary.transparent:active, input
   background-color: #737373;
   border-color: #737373;
 }
-/* line 85, ../scss/modules/_buttons.scss */
-button.small, .button.small, input[type=submit].small {
+/* line 86, ../scss/modules/_buttons.scss */
+button.small, .button.small, small.button, input[type=submit].small {
   padding: 0.25rem 0.5rem;
 }
-/* line 89, ../scss/modules/_buttons.scss */
+/* line 90, ../scss/modules/_buttons.scss */
+button.large, .button.large, input[type=submit].large {
+  font-size: 20.9052px;
+  font-size: 1.1614rem;
+}
+/* line 94, ../scss/modules/_buttons.scss */
 button.radius, .button.radius, input[type=submit].radius {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -2814,28 +2829,37 @@ button.radius, .button.radius, input[type=submit].radius {
   -o-border-radius: 3px;
   border-radius: 3px;
 }
+/* line 98, ../scss/modules/_buttons.scss */
+button.left, .button.left, input[type=submit].left {
+  float: left;
+}
+/* line 99, ../scss/modules/_buttons.scss */
+button.right, .button.right, input[type=submit].right {
+  float: right;
+  margin-right: 0;
+}
 
-/* line 94, ../scss/modules/_buttons.scss */
+/* line 102, ../scss/modules/_buttons.scss */
 .button-full {
   width: 100%;
   height: 100%;
   padding: 0;
   display: block;
 }
-/* line 172, ../scss/modules/_type.scss */
+/* line 184, ../scss/modules/_type.scss */
 .button-full:before {
   content: "";
   display: inline-block;
   height: 100%;
   vertical-align: middle;
 }
-/* line 179, ../scss/modules/_type.scss */
+/* line 191, ../scss/modules/_type.scss */
 .button-full > * {
   display: inline-block;
   vertical-align: middle;
 }
 
-/* line 103, ../scss/modules/_buttons.scss */
+/* line 111, ../scss/modules/_buttons.scss */
 .button-block {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -3005,21 +3029,26 @@ label.postfix {
   margin-right: 8px;
 }
 
+/* line 25, ../scss/modules/_state.scss */
+.hide, .hidden {
+  display: none !important;
+}
+
 @media only screen {
-  /* line 27, ../scss/modules/_state.scss */
+  /* line 31, ../scss/modules/_state.scss */
   .print-only {
     display: none !important;
   }
 }
 @media print {
-  /* line 27, ../scss/modules/_state.scss */
+  /* line 31, ../scss/modules/_state.scss */
   .print-only {
     display: inherit !important;
   }
 }
 
 @media print {
-  /* line 32, ../scss/modules/_state.scss */
+  /* line 36, ../scss/modules/_state.scss */
   .print-hide {
     display: none !important;
   }
@@ -3061,6 +3090,7 @@ label.postfix {
   color: white;
 }
 
+/* Import Extensions */
 /* line 19, ../scss/style.scss */
 body {
   position: absolute;
