--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -2,6 +2,7 @@
 
 @charset "UTF-8";
 
+/* Import Modules */
 @import
     'modules/_reset',
     'modules/_functions',
@@ -15,3 +16,7 @@
     'modules/_media',
     'modules/_state',
     'modules/_alerts';
+
+/* Import Extensions */
+// @import 
+    //'extensions/_codrops_progress';
