Grid refactoring and fixing media queries, adding line height settings

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -2,6 +2,7 @@
 
 @charset "UTF-8";
 
+
 /* Import Modules */
 @import
     'modules/_reset',
@@ -18,5 +19,5 @@
     'modules/_alerts';
 
 /* Import Extensions */
-// @import 
-    //'extensions/_codrops_progress';
+@import
+    'extensions/_codrops_progress';
