--- a/scss/modules/_type.scss
+++ b/scss/modules/_type.scss
@@ -16,7 +16,7 @@
 
 @mixin headings {
     h1, h2, h3, h4, h5, h6 {
-        line-height: 1;
+        line-height: $type-header-line-height;
         font-weight: $type-header-font-weight;
         font-style: $type-header-font-style;
         font-family: join($type-header-font-family, $type-base-font-family);
