--- a/scss/modules/_settings.scss
+++ b/scss/modules/_settings.scss
@@ -15,7 +15,7 @@ $grid-rows: 12 !default;
 $grid-padding: $x !default;
 
 // Color Palette
-$color-primary: blue !default;
+$color-primary: red !default;
 $color-secondary: gray !default;
 $color-dark: #222 !default;
 $color-light: #EFEFEF !default;
@@ -37,9 +37,13 @@ $type-base-font-style: normal !default;
 $type-base-font-weight: 300 !default;
 $type-base-color: #222 !default;
 
+$type-custom-import: "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" !default;
+$type-custom-font-family: "Open Sans" !default;
+
 $type-header-font-family: $type-custom-font-family !default;
 $type-header-font-weight: $type-base-font-weight !default;
 $type-header-font-style: normal !default;
+$type-header-line-height: 1.2 !default;
 $type-header-color: $type-base-color !default;
 $type-header-margin-top: 0 !default;
 $type-header-margin-bottom: $x-rem !default;
@@ -61,8 +65,6 @@ $type-code-color: $type-pre-color !default;
 $type-code-scale: 0 !default;
 $type-code-font-family: $type-pre-font-family;
 
-$type-custom-import: "//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" !default;
-$type-custom-font-family: "Open Sans" !default;
 
 $type-anchor-decoration: none !default;
 $type-anchor-hover-decoration: $type-anchor-decoration !default;
@@ -115,13 +117,13 @@ $breakpoint-short: 700px !default;
 $breakpoint-tall: 900px !default;
 
 // Horizontal Media Queries
-$mq-small: "only screen and (max-width: #{$breakpoint-small / $type-base-font-size} em)" !default;
-$mq-medium: "only screen and (min-width: #{$breakpoint-medium / $type-base-font-size} em)" !default;
-$mq-large: "only screen and (min-width: #{$breakpoint-large / $type-base-font-size} em)" !default;
+$mq-small: "only screen and (max-width: #{$breakpoint-small / $type-base-font-size}em)" !default;
+$mq-medium: "only screen and (min-width: #{$breakpoint-medium / $type-base-font-size}em)" !default;
+$mq-large: "only screen and (min-width: #{$breakpoint-large / $type-base-font-size}em)" !default;
 
 // Vertical Media Queries
-$mq-short: "only screen and (max-height: #{$breakpoint-short / $type-base-font-size} em)" !default;
-$mq-tall: "only screen and (min-width: #{$breakpoint-tall / $type-base-font-size} em)" !default;
+$mq-short: "only screen and (max-height: #{$breakpoint-short / $type-base-font-size}em)" !default;
+$mq-tall: "only screen and (min-width: #{$breakpoint-tall / $type-base-font-size}em)" !default;
 
 // Non-dimensional Media Queries
 $mq-print: "print" !default;
@@ -166,6 +168,8 @@ $button-group-margin-right: $button-margin-right !default;
 
 // Text Box Settings
 $text-margin-right: $form-margin-right !default;
+$text-margin-bottom: 0 !default;
+$text-full-margin-bottom: $x/2 !default;
 $text-padding-vertical: $form-padding-vertical !default;
 $text-padding-horizontal: $form-padding-horizontal !default;
 $text-border-width: $form-border-width !default;
